log
Thu 05 Oct 2023 03:58:01 AM UTC: 
 tests:  0|5
total_score: 0/70
ee1dc80
Thu 05 Oct 2023 04:01:37 AM UTC: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  0|5
total_score: 0/70
ed36b0e
Thu 05 Oct 2023 04:04:20 AM UTC: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|5
total_score: 0/70
7a2c8af
Thu 05 Oct 2023 04:05:36 AM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
de96079
Thu 05 Oct 2023 04:05:58 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
730b587
Thu 05 Oct 2023 04:07:04 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:63:37: error: stray ‘#’ in program
   63 |             if(is_valid(newNode)) { #debo hacer la funcion todavia
      |                                     ^
sudoku.c:63:38: error: unknown type name ‘debo’
   63 |             if(is_valid(newNode)) { #debo hacer la funcion todavia
      |                                      ^~~~
sudoku.c:63:49: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘la’
   63 |             if(is_valid(newNode)) { #debo hacer la funcion todavia
      |                                                 ^~
Compilation failed
0cfbaf0
Thu 05 Oct 2023 04:07:17 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
c8b1222
Thu 05 Oct 2023 04:10:09 AM UTC: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:52:13: error: unused variable ‘num’ [-Werror=unused-variable]
   52 |         int num = n->sudo[i][j];
      |             ^~~
sudoku.c:49:9: error: unused variable ‘subMatriz’ [-Werror=unused-variable]
   49 |     int subMatriz[9][10] = {0};
      |         ^~~~~~~~~
sudoku.c:48:9: error: unused variable ‘columnas’ [-Werror=unused-variable]
   48 |     int columnas[9][10] = {0};
      |         ^~~~~~~~
sudoku.c:47:9: error: unused variable ‘filas’ [-Werror=unused-variable]
   47 |     int filas[9][10] = {0};
      |         ^~~~~
cc1: all warnings being treated as errors
Compilation failed
6f81f9c
Thu 05 Oct 2023 04:14:01 AM UTC: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|5
total_score: 0/70
6ff3cb1
Thu 05 Oct 2023 04:15:13 AM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:59:33: error: statement with no effect [-Werror=unused-value]
   59 |           subMatriz[i/3*3 + j/3][num];
      |           ~~~~~~~~~~~~~~~~~~~~~~^~~~~
cc1: all warnings being treated as errors
Compilation failed
acc6b22
Thu 05 Oct 2023 04:15:29 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
2f01b9f
Thu 05 Oct 2023 04:15:49 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
15b6643
Thu 05 Oct 2023 04:19:16 AM UTC: 
 sudoku.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  5|3
total_score: 35/70
928ba9d
Thu 05 Oct 2023 04:27:38 AM UTC: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  6|2
total_score: 45/70
0c29817
Thu 05 Oct 2023 04:28:04 AM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
f8c19a8
Thu 05 Oct 2023 04:28:25 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:111:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
  111 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
d6a5b3f
